--- a/Latex Document/Latex Files/References.bib
+++ b/Latex Document/Latex Files/References.bib
@@ -68,3 +68,16 @@ url = {https://itextpdf.com/products/itextsharp},
 	url = {https://adacomputerscience.org/concepts/struct_dictionary?examBoard=ada&stage=all},
 	note = {Accessed on: October 14, 2024},
 }
+
+
+@misc{IndicatorVideo,
+	title = {How to make a Offscreen Target Indicator Arrow in Unity},
+	url =  {https://www.youtube.com/watch?v=gAQpR1GN0Os},
+	website={YouTube},
+	year={2013},
+	month={2},
+	day={21},
+	author={digijin},
+	note = {Accessed on: November 2023},
+}
+
