--- a/Latex Document/Latex Files/main.tex
+++ b/Latex Document/Latex Files/main.tex
@@ -26,13 +26,15 @@
 
 \newfontfamily{\codefont}{CamingoCode}
 
-
-\addbibresource{References.bib}
+\newcommand\tab[1][1cm]{\hspace*{#1}}
 
 \title{Asthma App}
 \author{Manar Ajhar \\ \texttt{manarajhar@hotmail.com} \and Dr. Suha Al-Naimi \\ \texttt{sal-naimi@sharjah.ac.ae}}
    
 \date{\today}
+
+
+\addbibresource{References.bib}
 
 \begin{document}
 
