--- a/Latex Document/Latex Files/main.tex
+++ b/Latex Document/Latex Files/main.tex
@@ -141,6 +141,8 @@
     \item{AR: Augmented Reality}
     
     \item{UI: User Interface}
+    
+    \item{UTC: Coordinated Universal Timezone}
 \end{itemize}
 
 \printbibliography
