New Date Structure
A new date class and a new date action plan question class were programmed, but not yet tested.

--- a/Latex Document/Latex Files/main.tex
+++ b/Latex Document/Latex Files/main.tex
@@ -77,22 +77,12 @@
     \item{Enumerator: A variable type in programming that has a certain number of possible values where one is selected, for example:
     
     \begin{itemize}
-    \item{Fruit:}
+    \item{InhalerColor:}
     	\begin{enumerate}
-    	\item{Apple,}
+    	\item{Blue,}
+    	\item{Brown,}
     	\item{Orange,}
-    	\item{Banana,}
-    	\item{Mango,}
-    	\item{Pear,}
-    	\item{Strawberry,}
-    	\end{enumerate}
-    \item{Animal:}
-        \begin{enumerate}
-    	\item{Cat,}
-    	\item{Dog,}
-    	\item{Horse,}
-    	\item{Pigeon,}
-    	\item{Turtle,}
+    	\item{Purple,}
     	\end{enumerate}
     \end{itemize} 
     }   
